--- a/AdventOfCode.fsproj
+++ b/AdventOfCode.fsproj
@@ -10,6 +10,7 @@
         <None Include="AStar.fsx" />
         <None Include="Dijkstra.fsx" />
         <None Include="Day01.fsx" />
+        <None Include="Day02.fsx" />
     </ItemGroup>
 
     <ItemGroup>
