--- a/AdventOfCode.fsproj
+++ b/AdventOfCode.fsproj
@@ -16,6 +16,7 @@
         <None Include="Day05.fsx" />
         <None Include="Day06.fsx" />
         <None Include="Day07.fsx" />
+        <None Include="Day08.fsx" />
     </ItemGroup>
 
 </Project>
