--- a/AdventOfCode.fsproj
+++ b/AdventOfCode.fsproj
@@ -19,6 +19,7 @@
         <None Include="Day08.fsx" />
         <None Include="Day09.fsx" />
         <None Include="Day10.fsx" />
+        <None Include="Day11.fsx" />
     </ItemGroup>
 
 </Project>
